--- a/数据结构.md
+++ b/数据结构.md
@@ -120,7 +120,7 @@ void perm(char *list, int i, int n)
 ```c++
 class Natural_Number {
     Natural_Number Zero() { return 0; }
-    Bool Is_Zero() {
+    bool Is_Zero() {
         if (x) return false;
         else return true;
     }
@@ -128,7 +128,7 @@ class Natural_Number {
         if ((x + y) <= INT_MAX) return x + y;
         else return INT_MAX;
     }
-    Bool Equal(x, y) {
+    bool Equal(x, y) {
         if (x == y) return true;
         else return false;
     }
