--- a/数据结构.md
+++ b/数据结构.md
@@ -6,6 +6,9 @@
     - [1.2 递归算法](#12-%e9%80%92%e5%bd%92%e7%ae%97%e6%b3%95)
     - [1.3 数据抽象](#13-%e6%95%b0%e6%8d%ae%e6%8a%bd%e8%b1%a1)
     - [1.4 空间复杂度和时间复杂度](#14-%e7%a9%ba%e9%97%b4%e5%a4%8d%e6%9d%82%e5%ba%a6%e5%92%8c%e6%97%b6%e9%97%b4%e5%a4%8d%e6%9d%82%e5%ba%a6)
+  - [II. 数组与结构](#ii-%e6%95%b0%e7%bb%84%e4%b8%8e%e7%bb%93%e6%9e%84)
+    - [2.1 ADT 数组与结构](#21-adt-%e6%95%b0%e7%bb%84%e4%b8%8e%e7%bb%93%e6%9e%84)
+    - [2.2 ADT 字符串](#22-adt-%e5%ad%97%e7%ac%a6%e4%b8%b2)
 
 ---
 
@@ -163,5 +166,78 @@ class Natural_Number {
 - **「$\Omega$」** $f(n) = \Omega(g(n))$ （读作 $f(n)$ omega 于 $g(n)$）当且仅当存在正的常数 $c$ 和 $n_0$，使得对于所有的 $n$，当 $n \geq n_0$ 时，有 $f(n) \geq cg(n)$。
 
 - **「$\Theta$」** $f(n) = \Theta(g(n))$ （读作 $f(n)$ theta 于 $g(n)$）当且仅当存在正的常数 $c_1, c_2$ 和 $n_0$，使得对于所有的 $n$，当 $n \geq n_0$ 时，有 $c_1g(n) \leq f(n) \leq c_2g(n)$。 
+
+
+---
+
+## II. 数组与结构
+
+
+### 2.1 ADT 数组与结构
+
+- **「ADT 数组」** 一个序对 `<index, value>` 的集合，其中对于每一个 `index` 值，都有一个集合中的 `item`（或 `value`）与其对应。`index` 是一个有穷的一维或多维有序集合。
+
+```c++
+class Array {
+    Array Create(j, list) {
+        return 一个 j 维的数组，其中 list 是一个 j 元组，其第 i 个分量表示数组第 i 维的大小。Items 没有定义。
+    }
+    Item Retrieve(A, i) {
+        if (i ∈ index) return 数组 A 中下标值为 i 的项。 
+        else return 错误
+    }
+    Array Store(A, i, x) {
+        if (i ∈ index) return 在原数组 A 增加新序对 <i, x> 后的数组。 else return 错误
+    }
+}
+```
+
+- **「结构 structure」** 是数据项的聚集，其中每一个数据项用相应的类型和名称标识。
+- **「共用体 union」** 的声明类似于结构，但是其成员域必须共享同一存储空间。
+- **「自引用结构 self-referential structure」** 是一种特殊的结构，它的一个或多个分量是指向其自身的指针。自引用结构通常需要动态存储管理程序（`malloc` 和 `free`）来显式地分配或释放内存。
+
+```c++
+typedef struct list {
+    char data;
+    list *link;
+}
+```
+
+
+### 2.2 ADT 字符串
+
+- **「ADT 字符串」** 零个或多个字符的有穷集合。
+
+```c++
+class String {
+    String null(m) {
+        return 一个字符串，其最大长度是 m 个字符，初值为 NULL，记 NULL 为 ""。
+    }
+    int Compare(s, t) {
+        if (s 等于 t) return 0
+        else if (s 在 t 之前) return -1
+        else return +1
+    }
+    bool IsNull(s) {
+        if (Compare(s, NULL)) return false
+        else return true
+    }
+    int Length(s) {
+        if (Compare(s, NULL)) return s 中字符的个数。
+        else return 0
+    }
+    String Concat(s, t) {
+        if (Compare(t, NULL)) return 一个字符串，其内容为 s 的字符元素后接 t 的字符元素。
+        else return s
+    }
+    String Substr(s, i, j) {
+        if ((j > 0) && (i + j - 1) < Length(s))
+            return 一个包含 s 中位置为 i, i+1, ..., i+j-1 的字符串
+        else return NULL
+    }
+}
+```
+
+- **「模式匹配」**
 
 
