--- a/数据结构.md
+++ b/数据结构.md
@@ -238,6 +238,28 @@ class String {
 }
 ```
 
-- **「模式匹配」**
+- **「模式匹配」** `nfind(string, pat)` 判断字符串 `pat` 是否在 `string` 里，若在，返回匹配成功的位置；若不在，返回 `-1`。`lasts` 和 `lastp` 分别记录 `string` 和 `pat` 字符串的末端位置。首先 `nfind` 比较 `string[endmatch]` 和 `pat[lastp]`，如果它们匹配，`nfind` 用 `i` 和 `j` 扫描这两个字符串，直到发现有字符失配或者 `pat` 的所有字符都得到匹配为止。
+
+```c++
+int nfind(char *string, char *pat)
+{
+    int i, j, start = 0;
+    int lasts = strlen(string) - 1;
+    int lastp = strlen(pat) - 1;
+    int endmatch = lastp;
+
+    for (i = 0; endmatch <= lasts; endmatch++, start++) {
+        if (string[endmatch] == pat[lastp])
+            for (j = 0, i = start; j < lastp && string[i] == pat[j]; i++, j++)
+                ;
+        if (j == lastp)
+            return start; //successful
+    }
+    return -1;
+}
+```
+
+
+
 
 
