--- a/数据结构.md
+++ b/数据结构.md
@@ -1,6 +1,7 @@
 # 数据结构
 
 - [数据结构](#%e6%95%b0%e6%8d%ae%e7%bb%93%e6%9e%84)
+  - [序](#%e5%ba%8f)
   - [I. 基本概念](#i-%e5%9f%ba%e6%9c%ac%e6%a6%82%e5%bf%b5)
     - [1.1 算法](#11-%e7%ae%97%e6%b3%95)
     - [1.2 递归算法](#12-%e9%80%92%e5%bd%92%e7%ae%97%e6%b3%95)
@@ -8,9 +9,20 @@
     - [1.4 空间复杂度和时间复杂度](#14-%e7%a9%ba%e9%97%b4%e5%a4%8d%e6%9d%82%e5%ba%a6%e5%92%8c%e6%97%b6%e9%97%b4%e5%a4%8d%e6%9d%82%e5%ba%a6)
   - [II. 数组与结构](#ii-%e6%95%b0%e7%bb%84%e4%b8%8e%e7%bb%93%e6%9e%84)
     - [2.1 ADT 数组与结构](#21-adt-%e6%95%b0%e7%bb%84%e4%b8%8e%e7%bb%93%e6%9e%84)
-    - [2.2 ADT 字符串](#22-adt-%e5%ad%97%e7%ac%a6%e4%b8%b2)
+    - [2.2 ADT 多项式](#22-adt-%e5%a4%9a%e9%a1%b9%e5%bc%8f)
+    - [2.3 ADT 稀疏矩阵](#23-adt-%e7%a8%80%e7%96%8f%e7%9f%a9%e9%98%b5)
+    - [2.4 ADT 字符串](#24-adt-%e5%ad%97%e7%ac%a6%e4%b8%b2)
+  - [III. 栈与队列](#iii-%e6%a0%88%e4%b8%8e%e9%98%9f%e5%88%97)
+    - [3.1 ADT 栈](#31-adt-%e6%a0%88)
 
 ---
+
+## 序
+
+- **「Markdown」** 全文均使用 Markdown 标记语言编写。
+- **「KaTeX」** 文中使用 `$` 符号包围的公式均可使用 KaTeX 渲染。
+- **「伪代码」** 文中凡是表示 ADT 或者结构的部分均使用伪代码表示。
+
 
 ## I. 基本概念
 
@@ -203,8 +215,47 @@ typedef struct list {
 }
 ```
 
+- **「有序表 / 线性表」** 「顺序映射 sequential mapping」是数组对于有序表的一种实现。
 
-### 2.2 ADT 字符串
+
+### 2.2 ADT 多项式
+
+- **「ADT 多项式」** 多项式的最大（最高）的指数称为多项式的次(degree)。假定有两个多项式，$A(x) = \sum a_ix^i$, $B(x) = \sum b_ix^i$，则：
+  $$A(x) + B(x) = \sum (a_i + b_i)x^i$$ $$A(x) \cdot B(x) = \sum (a_ix^i \cdot \sum (b_jx^j))$$
+  结构 `Polynomial` 是 $p(x) = a_1x^{e_1} + ... + a_nx^{e_n}$; 一个序对 <$e_i, a_i$> 的集合，其中 $a_i$ 为系数，指数 $e_i$ 为非负整数。
+
+```c++
+class Polynomial
+{
+    Polynomial Zero() { return 多项式 p(x) = 0 }
+    bool IsZero(Polynomial poly) {
+        if (poly) return false
+        else return true
+    }
+    Coefficient Coef(Polynomial poly, Exponent expon) {
+        if (expon ∈ poly) return 其系数
+        else return 0
+    }
+    Exponent Lead_exp(Polynomial poly) { return poly 的最大指数值 }
+    Polynomial Attach(Polynomial poly, Coefficient coef, Exponent expon) {
+        if (expon ∈ poly) return 错误
+        else return 插入项 <coef, expon> 后的多项式 poly
+    }
+    Polynomial Remove(Polynomial poly, Exponent expon) {
+        if (expon ∈ poly) return 删除指数等于 expon 项后的多项式 poly
+        else return 错误
+    }
+    Polynomial SingleMult(Polynomial poly, Coefficient coef, Exponent expon) { return 多项式 poly · coef · x^expon}
+    Polynomial Add(Polynomial poly1, Polynomial poly2) { return 多项式 poly1 + poly2 }
+    Polynomial Mult(Polynomial poly1, Polynomial poly2) { return 多项式 poly1 · poly2 }
+}
+```
+
+
+### 2.3 ADT 稀疏矩阵
+
+
+### 2.4 ADT 字符串
 
 - **「ADT 字符串」** 零个或多个字符的有穷集合。
 
@@ -259,7 +310,13 @@ int nfind(char *string, char *pat)
 }
 ```
 
+---
+
+## III. 栈与队列
 
 
+### 3.1 ADT 栈
 
+- **「栈 stack」** 是一个特殊的有序表，其插入和删除操作都在一端进行，插入和删除端称为「栈顶 top」。栈又称为「后进先出 LIFO」表。
+- **「系统栈」** 一种特殊的栈，用来处理程序运行时的函数调用。每当函数被调用时，系统首先创建一个称为「活动记录」或「栈帧」的结构，将其存放在系统栈的栈顶。初始时，被调函数的活动记录只包含一个指向前一个活动记录的指针和一个返回地址。前一个活动记录的指针指向调用函数的活动记录，而返回地址包含的是函数调用结束后下一条执行语句的地址。因为在任意时刻，只有一个函数被执行，所以被执行的函数就是活动记录位于系统栈栈顶的函数。如果该函数又调用其他函数，那么，函数中的局部变量（静态局部变量除外）及其参数也将加到其活动记录中。然后，为被调函数创建一个新的活动记录并存放在系统栈的栈顶。当被调函数结束时，删除该活动记录。此时，调用函数的活动记录又位于系统栈的栈顶，继续该函数的运行。
 
